--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,10 +8,19 @@ add_library(uva-networking
 )
 
 include_directories(${CMAKE_CURRENT_LIST_DIR})
+include_directories("${CMAKE_CURRENT_LIST_DIR}/include/asio/asio/include")
 
 set(NETWORKING_ROOT_DIR ${CMAKE_CURRENT_LIST_DIR})
 
 include("${CMAKE_CURRENT_LIST_DIR}/networking/CMakeLists.txt")
+
+if(WIN32 OR WIN64)
+else()
+	find_package(OpenSSL REQUIRED)
+	include_directories(${OPENSSL_INCLUDE_DIR})
+	target_link_libraries(uva-networking ${OPENSSL_LIBRARIES})
+endif()
+
 
 #Tests
 
