--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,18 +18,10 @@ include("${CMAKE_CURRENT_LIST_DIR}/networking/CMakeLists.txt")
 
 find_package(OpenSSL REQUIRED)
 include_directories(${OPENSSL_INCLUDE_DIR})
-target_link_libraries(uva-networking ${OPENSSL_LIBRARIES})
+target_link_libraries(uva-networking ${OPENSSL_LIBRARIES} uva-binary)
 
 if(WIN32)
 	get_filename_component(OPENSSL_ROOT ${OPENSSL_INCLUDE_DIR} DIRECTORY)
-
-	add_custom_command(TARGET uva-networking POST_BUILD
-		COMMAND ${CMAKE_COMMAND} -E copy_directory
-        "${OPENSSL_ROOT}/bin"
-        $<TARGET_FILE_DIR:uva-networking>
-	)
-
-
 endif()
 
 #Tests
