--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,10 +14,15 @@ include_directories("${CMAKE_CURRENT_LIST_DIR}/include/asio/asio/include")
 
 set(NETWORKING_ROOT_DIR ${CMAKE_CURRENT_LIST_DIR})
 
+# tools
 include("${CMAKE_CURRENT_LIST_DIR}/networking/CMakeLists.txt")
+
+# samples
+include("${CMAKE_CURRENT_LIST_DIR}/samples/basic_web_client/CMakeLists.txt")
 
 find_package(OpenSSL REQUIRED)
 include_directories(${OPENSSL_INCLUDE_DIR})
+
 target_link_libraries(uva-networking ${OPENSSL_LIBRARIES} uva-binary)
 
 if(WIN32)
