[WIP] OpenSSL is now optional

--- a/samples/basic_web_client/CMakeLists.txt
+++ b/samples/basic_web_client/CMakeLists.txt
@@ -7,11 +7,15 @@ add_executable(basic-web-client
 	${CMAKE_CURRENT_LIST_DIR}/src/main.cpp
 )
 
-find_package(OpenSSL REQUIRED)
-include_directories(${OPENSSL_INCLUDE_DIR})
+target_link_libraries(basic-web-client uva-networking uva-core uva-json uva-console)
 
-target_link_libraries(basic-web-client ${OPENSSL_LIBRARIES} uva-networking uva-core uva-json uva-console)
+if(OpenSSL)
+	include_directories(${OPENSSL_INCLUDE_DIR})
+	target_link_libraries(basic-web-client ${OPENSSL_LIBRARIES})
+endif()
 
 if(WIN32)
-	get_filename_component(OPENSSL_ROOT ${OPENSSL_INCLUDE_DIR} DIRECTORY)
+	if(OpenSSL)
+		get_filename_component(OPENSSL_ROOT ${OPENSSL_INCLUDE_DIR} DIRECTORY)
+	endif()
 endif()
