--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,10 +20,12 @@ include("${CMAKE_CURRENT_LIST_DIR}/networking/CMakeLists.txt")
 # samples
 include("${CMAKE_CURRENT_LIST_DIR}/samples/basic_web_client/CMakeLists.txt")
 
-find_package(OpenSSL REQUIRED)
-include_directories(${OPENSSL_INCLUDE_DIR})
+target_link_libraries(uva-networking uva-binary)
 
-target_link_libraries(uva-networking ${OPENSSL_LIBRARIES} uva-binary)
+if(OpenSSL)
+	include_directories(${OPENSSL_INCLUDE_DIR})
+	target_link_libraries(uva-networking ${OPENSSL_LIBRARIES})
+endif()
 
 if(WIN32)
 	get_filename_component(OPENSSL_ROOT ${OPENSSL_INCLUDE_DIR} DIRECTORY)
