--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,10 @@ cmake_minimum_required(VERSION 3.10)
 project(andy-net)
 
 set(ANDY_NET_SOURCES
-	${CMAKE_CURRENT_LIST_DIR}/src/http.cpp
+	${CMAKE_CURRENT_LIST_DIR}/src/response.cpp
+
+	${CMAKE_CURRENT_LIST_DIR}/src/asio/http.cpp
+	${CMAKE_CURRENT_LIST_DIR}/src/asio/response.cpp
 )
 
 add_library(andy-net OBJECT
