--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,16 +3,25 @@ cmake_minimum_required(VERSION 3.10)
 
 project(andy-net)
 
-set(ANDY_NET_SOURCES
-	${CMAKE_CURRENT_LIST_DIR}/src/response.cpp
+# Check if we are in emscripten
+if(EMSCRIPTEN)
+else()
+	set(ANDY_NET_BACKEND "asio")
+endif()
 
-	${CMAKE_CURRENT_LIST_DIR}/src/asio/http.cpp
-	${CMAKE_CURRENT_LIST_DIR}/src/asio/response.cpp
-)
+if(ANDY_NET_BACKEND)
+	set(ANDY_NET_SOURCES
+		${CMAKE_CURRENT_LIST_DIR}/src/response.cpp
 
-add_library(andy-net OBJECT
-	${ANDY_NET_SOURCES}
-)
+		${CMAKE_CURRENT_LIST_DIR}/src/asio/http.cpp
+		${CMAKE_CURRENT_LIST_DIR}/src/asio/response.cpp
+	)
+
+	add_library(andy-net OBJECT
+		${ANDY_NET_SOURCES}
+	)
+endif()
+
 
 find_package(Threads REQUIRED)
 
@@ -22,8 +31,8 @@ set(ANDY_NET_LIBRARIES
 
 find_package(Threads REQUIRED)
 
-find_package(OpenSSL REQUIRED)
-include_directories(${OPENSSL_INCLUDE_DIR})
+# find_package(OpenSSL QUIET)
+# include_directories(${OPENSSL_INCLUDE_DIR})
 
 include_directories(${CMAKE_CURRENT_LIST_DIR}/include)
 include_directories(${CMAKE_CURRENT_LIST_DIR}/modules/asio/asio/include)
@@ -32,4 +41,6 @@ if(WIN32)
 	get_filename_component(OPENSSL_ROOT ${OPENSSL_INCLUDE_DIR} DIRECTORY)
 endif()
 
-andy_tests_configure(andy-net)
+if(ANDY_NET_BACKEND)
+	andy_tests_configure(andy-net)
+endif()
